refactor: per-agent ToolRegistry scopes for tool isolation
Replace shared mutable ToolRegistry maps with per-agent AgentToolScope
instances keyed by agent name. Each agent gets its own tool namespace,
preventing tool leakage between agents and enabling URLClassLoader
lifecycle management.

Changes:
- ToolRegistry: add AgentToolScope inner class with per-agent maps
- loadToolSources(String agentName, List<ToolSource>) — scoped loading
- executeActiveTools(String agentName, ...) — scoped execution
- getAvailableToolNames() / findTool() — global union (Embabel compat)
- evictAgent(agentName) — close URLClassLoaders, remove scope
- @PreDestroy evicts all agent scopes
- Builtin tools (Calculator, WebSearch, Weather) shared as read-only base
- AgentExecutionService: pass agentName to all scoped ToolRegistry calls
- Update tests for new scoped API signatures
- Deprecate register()/registerProvider() (use loadToolSources instead)

Resolves: docs/tech-debt/tool-registry-shared-mutable-state.md